# ZKP-Chaum-Pedersen-Protocol

./: .env.example  Cargo.toml  Dockerfile  Readme.md  build.rs  deploy.md  docker-compose.yml  sqlx.toml
migrations/: 20230616105650_create_users.up.sql  20230616105658_create_auth.up.sql
proto/: zkp_auth.proto
src/: config.rs  lib.rs  main.rs  schema.rs
src/config/: config.rs
src/db/: db.rs  db_connection.rs  mod.rs
src/errors/: errors.rs  mod.rs
src/handlers/: auth_handlers.rs  mod.rs
src/models/: auth.rs  mod.rs  user.rs
src/services/: mod.rs  zkp_auth.rs
src/utils/: mod.rs  zkp_utils.rs
terraform/environments/production/: main.tf  terraform.tfvars
terraform/environments/sandbox/: main.tf  terraform.tfvars  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
tests/: auth_handlers_test.rs  server_tests.rs  utils.rs
