[package]
name = "nillion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
prost = "0.11.8"
protobuf = "3.2.0"
tokio = { version = "1.28.2", features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.10.0"

[build-dependencies]
tonic-build = "0.9.2"
