[package]
name = "zkp_app"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
tonic = "0.9.2"
prost = "0.11.8"
tokio = { version = "1.28.2", features = ["full"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls"] }
envconfig = "0.10.0"
lazy_static = "1.4.0"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num = "0.4.0"
anyhow = "1.0"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
env_logger = "0.10.0"
dotenv = "0.15"
log = "0.4"

[dev-dependencies]
cargo-husky = "1"
protobuf = "3.2.0"

[build-dependencies]
tonic-build = "0.9.2"
